--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
 </head>
-<body class="w-3/4-">
+<body class="w-full">
   <div class="flex mt-7 ml-16">
     <h3 class="text-gray-500">Usuário Github</h3>
     <input class="bg-gray-300 ml-2 placeholder:text-gray-700 placeholder:text-xs rounded-sm w-44 px-2" type="text" placeholder="Digite o Usuário:">
     <button class="bg-purple-600 text-white text-xs w-20 ml-2 rounded-sm" type="button">Adicionar</button>
   </div><br><br><br><br>
-  <div class=" ml-16 border-solid border-2 border-black w-96 h-96" >
+  <div class="rounded-md ml-16 border-solid border-2 border-black w-96 h-96" >
         <img class="h-32 w-full" src="imagens/pngtree-sky-with-clouds-sunrise-sky-background-sky-summer-morning-photo-image_30868374.jpg" alt="">
   </div>
 </body>
