--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,18 @@
     <input class="bg-gray-300 ml-2 placeholder:text-gray-700 placeholder:text-xs rounded-sm w-44 px-2" type="text" placeholder="Digite o Usuário:">
     <button class="bg-purple-600 text-white text-xs w-20 ml-2 rounded-sm" type="button">Adicionar</button>
   </div><br><br><br><br>
-  <div class="rounded-md ml-16 border-solid border-2 border-black w-96 h-96" >
+  <div class="rounded-md ml-16 border-solid border-2 border-black w-96 h-96 items-center text-center content-center" >
         <img class="h-32 w-full" src="imagens/pngtree-sky-with-clouds-sunrise-sky-background-sky-summer-morning-photo-image_30868374.jpg" alt="">
+        <img class="h-28 mx-auto -translate-y-14 rounded-full border-white border-4" src="imagens/130068099.png" alt="">
+        <p class="text-xl -translate-y-14">Dudxxx</p>
+        <p class="text-xs text-gray-500 -translate-y-14">@Dudxxx</p>
+        <h3 class="text-left ml-3 -translate-y-6">REPOSITÓRIOS</h3>
+        <div class="bg-gray-200 w-11/12 mx-auto -translate-y-2 text-left px-2">
+          <p class="font-bold">nome do repositorio</p>
+          <p>descrição</p>
+          <p>#HTML</p>
+
+        </div>
   </div>
 </body>
 </html>
